external-api/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-api
  namespace: external-api
spec:
  selector:
    app: external-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
